updating gitignore to ignore my arxiv directory and local version of pandoc

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 differential_geometry_in_hott/latex/discrete_gauge_theory/html
+differential_geometry_in_hott/latex/discrete_gauge_theory/pandoc*
+differential_geometry_in_hott/latex/discrete_gauge_theory/arxiv*
 
 copyright
 .nova
