--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.yml
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.yml
@@ -9,11 +9,16 @@ header-includes: |
     font-weight: bold;
     text-align: center;
   }
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
   </style>
   $\newcommand{\textesh}{∫}$
   $\newcommand{\ensuremath}{}$
 title:
 summary: In-progress masters thesis defining connections, curvature, and Chern-Weil theory in the discrete setting of homotopy type theory.
-date: 2024-11-01
+date: 2025-03
 bibliography: connections.bib
 csl: ima.csl
