draft for the week

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.yml
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.yml
@@ -19,6 +19,6 @@ header-includes: |
   $\newcommand{\ensuremath}{}$
 title:
 summary: In-progress masters thesis defining connections, curvature, and Chern-Weil theory in the discrete setting of homotopy type theory.
-date: 2025-03
+date: 2025-03-12
 bibliography: connections.bib
 csl: ima.csl
