i took an additional critical pass of the first 5 sections

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.yml
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.yml
@@ -17,6 +17,7 @@ header-includes: |
   </style>
   $\newcommand{\textesh}{∫}$
   $\newcommand{\ensuremath}{}$
+  $\newcommand{\raisebox}[2]{}$
 
 title:
 summary: In-progress masters thesis defining connections, curvature, and Chern-Weil theory in the discrete setting of homotopy type theory.
