a true draft! about to spell check

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.yml
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.yml
@@ -23,4 +23,4 @@ title:
 summary: In-progress masters thesis defining connections, curvature, and Chern-Weil theory in the discrete setting of homotopy type theory.
 date: 2025-03-12
 bibliography: connections.bib
-csl: ima.csl
+csl: aims-mathematics.csl
